--- a/src/learned_models/beacon/estimators/simple_estimator_nnv/README
+++ b/src/learned_models/beacon/estimators/simple_estimator_nnv/README
@@ -1,1 +1,1 @@
-Same architecture as simple_estimator_gpt, but uses 3 timesteps instead of 2
+Same architecture as simple_estimator_gpt, but incorporates nnv loss
